# agent_template

./: .gitattributes  .gitignore  README.md  README_EN.md  package.json
.github/workflows/: rag-evaluation.yml
clients/chat-web/: next.config.ts  package.json
clients/chat-web/app/: layout.tsx  page.tsx
clients/chat-web/components/: AppHeader.tsx  ObservabilityDrawer.tsx  useDemoUser.ts
clients/chat-web/lib/: demoUsers.ts  documentApi.ts
docs/: rag-evaluation-bootstrap.md
docs/superpowers/plans/: 2026-06-12-langchain-llm-integration.md  2026-06-14-prisma-setup.md  2026-06-18-postgres-chat-history.md  2026-06-23-langgraph-requirement-analysis.md
docs/superpowers/specs/: 2026-06-12-langchain-llm-integration-design.md
infra/compose/: compose.dev.yaml  compose.yaml
mcp-servers/requirement-tools/: package.json
mcp-servers/requirement-tools/scripts/: test.mjs
mcp-servers/web-search/: package.json
mcp-servers/web-search/src/: index.ts
scripts/: test-memory-conversation.mjs  test-ui-component-protocol.mjs
services/chat/: .env.example  package.json  prisma.config.ts  tsconfig.build.json  tsconfig.json
services/chat/config/: langchain.yaml
services/chat/prisma/: schema.prisma
services/chat/scripts/: run-deepagent-analysis-demo.ts  run-rag-evaluation.ts  run-skill-demo.ts
services/chat/src/: app.controller.ts  app.module.ts  main.ts
services/mcp-server/: package.json
services/ragas-evaluator/: README.md  pyproject.toml
services/ragas-evaluator/ragas_evaluator/: __init__.py  app.py
services/ragas-evaluator/tests/: test_app.py
(+171 files in other folders)
